# ancestry-recording-experiments

./: run_benchmark.sh
ancestry-inline-simplification/: Cargo.toml
ancestry-inline-simplification/src/: indexed_node.rs  indexed_population.rs  lib.rs
