[package]
name = "ancestry-inline-simplification"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html
[profile.release]
debug = 2

[dev-dependencies]
tskit = "~0.9"
tskit-evolution = { version = "~0.1.0", path = "../tskit-evolution" }

[dependencies]
ancestry-common = { version = "~0.1.0", path = "../ancestry-common" }
neutral-evolution = { version = "~0.1.0", path = "../neutral-evolution" }
hashbrown = "~0.12.0"
nohash-hasher = "0.2.0"
bitflags = "~1.3.0"
thiserror = "~1.0.30"
